Fixing the footer alignment

--- a/media-queries.css
+++ b/media-queries.css
@@ -14,30 +14,30 @@
         margin-top: 30px;
     }
     footer {
-        height: 100%;
+        height: 110vw;
         /* background: black; */
-        justify-content: stretch;
+        justify-content: space-evenly;
     }
     .address {
         /* border: 2px solid red; */
-        display: block;
+        /* display: block; */
         width: 100%;
         text-align: center;
-        margin-top: 10px;
+        /* margin-top: 10px; */
     }
     #support {
         /* border: 2px solid yellow; */
-        display: block;
+        /* display: block; */
         width: 100%;
         text-align: center;
-        margin-top: 30px;
+        /* margin-top: 30px; */
     }
     #socials {
         /* border: 2px solid green; */
-        display: block;
+        /* display: block; */
         width: 100%;
         text-align: center;
-        margin-top: 30px;
+        /* margin-top: 30px; */
     }
     #logos-social-media {
         flex-direction: row;
